[tool.poetry]
name = "incolumepy.prospect.redis"
version = "0.1.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
